<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Primary Settings">

        <SwitchPreference
            android:key="switch_pref_enable_disable_profile"
            android:title="@string/switch_for_profile_settings"
            android:switchTextOn="ON"
            android:switchTextOff="OFF"
            android:summaryOn="@string/switch_pref_summary_on"
            android:summaryOff="@string/switch_pref_summary_off"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sound_setting">

        <RingtonePreference
            android:key="ringtone_pref_selection"
            android:title="@string/preference_ringtone_selection"
            android:showDefault="true"
            android:summary="@string/ringtone_pref_summary"
            android:icon="@mipmap/ic_launcher"/>

        <RingtonePreference
            android:key="notification_pref_selection"
            android:title="@string/preference_notification_selection"
            android:showDefault="true"
            android:summary="@string/notification_pref_summary"
            android:icon="@mipmap/ic_launcher"/>

    </PreferenceCategory>

</PreferenceScreen>